# qcamera-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cxx  app.h  main.cxx
